2016-02-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove bogus GCC-4.9.3 dependencies.

	* mingw32/mingw32-gcc4.xml (gcc-core-dev): Make dependencies on...
	(libgomp-dll-1, libssp-dll-0): ...these specific to each GCC version.
	(libgcc-dll-1): Remove unnecessary dependency on...
	(libmpc-dll-3): ...this; reassign it where it is needed...
	(gcc-core-bin): ...here.

	* common/issue.log mingw32/issue.log: Update accordingly.

2016-02-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade GCC; make version 4.9.3 the preferred release.

	* mingw32/mingw32-gcc4.xml: Add v4.9.3 references for all GCC
	component packages, associated sub-packages, and library packages.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-01-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade mingwrt to version 3.21.1

	* mingw32/mingw32-runtime.xml (mingwrt): Add new version references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-01-08  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgraded package mingw32-ncurses to version 6.0-2.

	* contrib/mingw32-ncurses.xml: Created separate package
	  definitions for ncurses, libncurses, and terminfo.
	  Added libncurses-dll package.
	* contrib/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

	Updated package mingw32-pdcurses.

	* contrib/mingw32-pdcurses.xml: Added missing group affiliates.

2016-01-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Give contributed package their own package list.

	* mingw32/mingw32-package-list.xml: Remove contributed packages, to...
	* contrib/mingw32-contrib-package-list.xml: ...this new file.
	* common/package-list.xml (mingw32-contrib-package-list.xml): Add it.
	* common/issue.log mingw32/issue.log contrib/issue.log: Regenerate;
	publish all affected catalogue files.

2016-01-04  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade mingw32-libunistring package to 0.9.6.
