@@ -108,18 +108,22 @@
         <release tarname="gcc-core-4.8.1-4-mingw32-dev.tar.lzma">
           <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
           <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libmpc-*-mingw32-dll-3.tar" />
         </release>
         <release tarname="gcc-core-4.8.1-3-mingw32-dev.tar.lzma">
           <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
           <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libmpc-*-mingw32-dll-3.tar" />
         </release>
         <release tarname="gcc-core-4.8.1-2-mingw32-dev.tar.lzma">
           <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
           <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libmpc-*-mingw32-dll-2.tar" />
         </release>
         <release tarname="gcc-core-4.8.1-1-mingw32-dev.tar.lzma">
           <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
           <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libmpc-*-mingw32-dll-2.tar" />
         </release>
         <release tarname="gcc-core-4.7.2-1-mingw32-dev.tar">
           <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
@@ -203,19 +207,15 @@
         <release tarname="libgcc-4.9.3-1-mingw32-dll-1.tar.xz" />
         <release tarname="libgcc-4.8.1-4-mingw32-dll-1.tar">
           <download tarname="gcc-core-4.8.1-4-mingw32-dll.tar.lzma"/>
-          <requires eq="mingw32-libmpc-*-mingw32-dll-3.tar" />
         </release>
         <release tarname="libgcc-4.8.1-3-mingw32-dll-1.tar">
           <download tarname="gcc-core-4.8.1-3-mingw32-dll.tar.lzma"/>
-          <requires eq="mingw32-libmpc-*-mingw32-dll-3.tar" />
         </release>
         <release tarname="libgcc-4.8.1-2-mingw32-dll-1.tar">
           <download tarname="gcc-core-4.8.1-2-mingw32-dll.tar.lzma"/>
-          <requires eq="mingw32-libmpc-*-mingw32-dll-2.tar" />
         </release>
         <release tarname="libgcc-4.8.1-1-mingw32-dll-1.tar">
           <download tarname="gcc-core-4.8.1-1-mingw32-dll.tar.lzma"/>
-          <requires eq="mingw32-libmpc-*-mingw32-dll-2.tar" />
         </release>
         <release tarname="libgcc-4.5.2-1-mingw32-dll-1.tar.lzma" />
         <release tarname="libgcc-4.6.1-2-mingw32-dll-1.tar.lzma" />
